--- a/app/views/psd-general/cases-page-2.html
+++ b/app/views/psd-general/cases-page-2.html
@@ -739,7 +739,7 @@
                                 2021-11
                             </td>
                             <td headers="caseowner item-01 meta-01" class="govuk-table__cell">
-                                David Willis
+                                OPSS Enforcement
                             </td>
                             <td headers="updated item-01 meta-01" class="govuk-table__cell">
                                 about 6 hours ago
@@ -877,7 +877,7 @@
                                 1007-27002
                             </td>
                             <td headers="caseowner item-05 meta-05" class="govuk-table__cell">
-                                Warwickshire Council
+                                Birmingham Trading Standards
                             </td>
                             <td headers="updated item-05 meta-05" class="govuk-table__cell">
                                 6 months ago
