--- a/app/views/cosmetics-general/complete-product_b_notified.html
+++ b/app/views/cosmetics-general/complete-product_b_notified.html
@@ -104,7 +104,7 @@
 
         <section id="aliquam-in-placerat-est" class="govuk-!-margin-top-9 opss-grouping">
             <h3 class="govuk-heading-m opss-grouping__heading-m">
-                Component 1: Aliquam in placerat est
+                Component: Aliquam in placerat est
             </h3>
 
             <dl class="govuk-summary-list opss-summary-list-mixed">
