--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -250,18 +250,8 @@ ul.opss-radio-list {
 
 .opss-cross-through {
     background:
-         linear-gradient(to top left,
-             rgba(0,0,0,0) 0%,
-             rgba(0,0,0,0) calc(50% - 1px),
-             $govuk-border-colour 50%,
-             rgba(0,0,0,0) calc(50% + 1px),
-             rgba(0,0,0,0) 100%),
-         linear-gradient(to top right,
-             rgba(0,0,0,0) 0%,
-             rgba(0,0,0,0) calc(50% - 1px),
-             $govuk-border-colour 50%,
-             rgba(0,0,0,0) calc(50% + 1px),
-             rgba(0,0,0,0) 100%);
+        linear-gradient(to top left, rgba(0,0,0,0) 0%, rgba(0,0,0,0) calc(50% - 1px), $govuk-border-colour 50%, rgba(0,0,0,0) calc(50% + 1px), rgba(0,0,0,0) 100%),
+        linear-gradient(to top right, rgba(0,0,0,0) 0%, rgba(0,0,0,0) calc(50% - 1px), $govuk-border-colour 50%, rgba(0,0,0,0) calc(50% + 1px), rgba(0,0,0,0) 100%);
 }
 
 .opss-form-group {
