updates to COS prods page

--- a/app/views/cosmetics-general/incomplete-product_b.html
+++ b/app/views/cosmetics-general/incomplete-product_b.html
@@ -19,14 +19,14 @@
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-two-thirds">
             <h1 class="govuk-heading-l">
-              <span class="govuk-caption-l">Incomplete notification for: </span>
+              <span class="govuk-caption-l">Incomplete product: </span>
                 Browns Shampoo
             </h1>
           </div>
           <div class="govuk-grid-column-one-third">
-            <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
+            <!--a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-align-right opss-text-underline-offset">
               Delete this incomplete notification
-            </a>
+            </a-->
           </div>
         </div>
 
