--- a/app/views/drafts-gui/add-nano-step.html
+++ b/app/views/drafts-gui/add-nano-step.html
@@ -9,7 +9,7 @@
 
         <hr>
 
-        <p>The user goes straight to the first page of the nanomaterials task (journey). If the draft is a single product, this nanomaterial is automatically associated with the single product. (The use must re-run item tasks to add any nanomaterials it an item in a multi-item product).</p>
+        <p>The user goes straight to the first page of the nanomaterials task (journey). If the draft is a single product, this nanomaterial is automatically associated with the single product. (The user must re-run item tasks to add any nanomaterials if an item is a multi-item product).</p>
 
         <hr>
 
