--- a/app/views/drafts-gui/draft-3_step-1.html
+++ b/app/views/drafts-gui/draft-3_step-1.html
@@ -30,6 +30,7 @@
             <li>On completion of the task (which includes providing the product name) - when the user returns to the draft page - the main page title will update to 'Product draft for:
 Lorem ipsum' (with an extra HTML span)</li>
             <li>The text in the associated hint text also changes: "add a cosmetic product" becomes "add <em>the</em> cosmetic product"</li>
+            <li>The 'View draft' link and 'Delete draft' link appear - top right</li>
         </ul>
 
         <hr>
