--- a/app/views/index.html
+++ b/app/views/index.html
@@ -65,6 +65,18 @@
 
       </ul>
 
+
+      <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
+        <summary class="govuk-details__summary">
+          <span class="govuk-details__summary-text">
+            <abbr>PSD</abbr> general
+          </span>
+        </summary>
+        <div class="govuk-details__text">
+          <a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page" target="_blank">Cases page &quot;refresh&quot;</a>
+        </div>
+      </details>
+
       <details class="govuk-details govuk-!-margin-top-6" data-module="govuk-details">
         <summary class="govuk-details__summary">
           <span class="govuk-details__summary-text">
