--- a/app/views/cosmetics-general/complete-product_b_notified.html
+++ b/app/views/cosmetics-general/complete-product_b_notified.html
@@ -51,6 +51,14 @@
                     099-3361
                 </dd>
             </div>
+            <div class="govuk-summary-list__row">
+                <dt class="govuk-summary-list__key">
+                    <abbr>UK</abbr> notified
+                </dt>
+                <dd class="govuk-summary-list__value">
+                    12 August 2021
+                </dd>
+            </div>
         </dl>
 
         <section id="product-table" class="govuk-!-margin-top-7">
@@ -104,7 +112,7 @@
 
         <section id="aliquam-in-placerat-est" class="govuk-!-margin-top-9 opss-grouping">
             <h3 class="govuk-heading-m opss-grouping__heading-m">
-                Component: Aliquam in placerat est
+                Details
             </h3>
 
             <dl class="govuk-summary-list opss-summary-list-mixed">
