components changed to items

--- a/app/views/cosmetics-general/complete-product_b_notified.html
+++ b/app/views/cosmetics-general/complete-product_b_notified.html
@@ -78,7 +78,7 @@
                     <dd class="govuk-summary-list__value">No</dd>
                 </div>
                 <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">Number of components</dt>
+                    <dt class="govuk-summary-list__key">Number of items</dt>
                     <dd class="govuk-summary-list__value">1</dd>
                 </div>
                 <div class="govuk-summary-list__row">
@@ -104,7 +104,7 @@
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">Are the components mixed?</dt>
+                    <dt class="govuk-summary-list__key">Are the items mixed?</dt>
                     <dd class="govuk-summary-list__value">No</dd>
                 </div>
             </dl>
