--- a/app/views/cosmetics-general/incomplete-product_b.html
+++ b/app/views/cosmetics-general/incomplete-product_b.html
@@ -80,7 +80,7 @@
                     <dd class="govuk-summary-list__value">No</dd>
                 </div>
                 <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">Number of components</dt>
+                    <dt class="govuk-summary-list__key">Number of items</dt>
                     <dd class="govuk-summary-list__value">2</dd>
                 </div>
                 <div class="govuk-summary-list__row">
@@ -111,7 +111,7 @@
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">Are the components mixed?</dt>
+                    <dt class="govuk-summary-list__key">Are the items mixed?</dt>
                     <dd class="govuk-summary-list__value">Yes</dd>
                 </div>
                 <div class="govuk-summary-list__row">
@@ -126,7 +126,7 @@
         </section>
 
         <section id="lorem-ipsum-title" class="govuk-!-margin-top-9 opss-grouping">
-            <h3 class="govuk-heading-m opss-grouping__heading-m">Component 1: Lorem ipsum title</h3>
+            <h3 class="govuk-heading-m opss-grouping__heading-m">Item 1: Lorem ipsum title</h3>
 
             <dl class="govuk-summary-list opss-summary-list-mixed">
                 <div class="govuk-summary-list__row">
@@ -225,7 +225,7 @@
 
         <section id="ipsoniuum-title" class="govuk-!-margin-top-9 opss-grouping">
             <h3 class="govuk-heading-m opss-grouping__heading-m">
-                Component 2: Ipsoniuum name
+                Item 2: Ipsoniuum name
             </h3>
 
             <dl class="govuk-summary-list opss-summary-list-mixed">
