--- a/app/views/index.html
+++ b/app/views/index.html
@@ -73,7 +73,11 @@
           </span>
         </summary>
         <div class="govuk-details__text">
-          <a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page" target="_blank">Cases page &quot;refresh&quot;</a>
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page" target="_blank">Cases page &quot;refresh&quot;</a> full</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list" target="_blank">Cases page &quot;refresh&quot;</a> list only</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-filters-keywords" target="_blank">Cases page &quot;refresh&quot;</a> filters &amp; keywords only</li>
+          </ul>
         </div>
       </details>
 
