work on psd images designs

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -107,6 +107,7 @@
             <li><a href="/psd-page-widths/demo5" target="_blank">Demo 5 products list</a></li>
             <li><a href="/psd-page-widths/demo6" target="_blank">Demo 6 businesses list</a></li>
             <li><a href="/psd-page-widths/demo7" target="_blank">Demo 7 product detail</a></li>
+            <li><a href="/psd-page-widths/demo8" target="_blank">Demo 8 cases images</a></li>
           </ul>
           <ul class="govuk-list govuk-list--bullet">
             <li>On Header: Replace .psd-header with .govuk-header</li>
