--- a/app/views/psd-general/cases-page.html
+++ b/app/views/psd-general/cases-page.html
@@ -20,8 +20,8 @@
 
 <script>
   document.getElementById("results-sort").addEventListener("change", function(){
-      //document.getElementById("sort-form").submit();
-      alert('form submitted event');
+      document.getElementById("sort-form").submit();
+      //alert('form submitted event');
     }
   );
 </script>
