--- a/app/assets/sass/opss/_opss-psd.scss
+++ b/app/assets/sass/opss/_opss-psd.scss
@@ -207,6 +207,7 @@ ul.opss-radio-list {
     margin-bottom: govuk-spacing(1);
     @include govuk-media-query($from: tablet) {
         margin-bottom: 0;
+        /*min-width: 106px; text-align: center; */
     }
 
     td & {
