psd images page solution

--- a/app/views/psd-general/imgs-pg2.html
+++ b/app/views/psd-general/imgs-pg2.html
@@ -10,7 +10,7 @@
 <nav class="hmcts-sub-navigation">
   <ul class="hmcts-sub-navigation__list">
       <li class="hmcts-sub-navigation__item">
-        <a class="hmcts-sub-navigation__link" id="Overview_id" href="/cases/2109-0007">
+        <a class="hmcts-sub-navigation__link" id="Overview_id" href="/psd-general/imgs-pg1">
           Overview
 </a>      </li>
       <li class="hmcts-sub-navigation__item">
@@ -23,7 +23,7 @@
 </a>      </li>
       <li class="hmcts-sub-navigation__item">
         <a class="hmcts-sub-navigation__link" aria-current="page" id="Images_id" href="/cases/2109-0007/images">
-          Images (2) (3)
+          Images (1) (2)
 </a>      </li>
       <li class="hmcts-sub-navigation__item">
         <a class="hmcts-sub-navigation__link" id="Supporting information_id" href="/cases/2109-0007/supporting-information">
@@ -58,32 +58,19 @@
       <ul class="govuk-tabs__list">
         <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
           <a class="govuk-tabs__tab" href="#opss-case-images">
-            Case images (2)
+            Case images (1)
           </a>
         </li>
         <li class="govuk-tabs__list-item">
           <a class="govuk-tabs__tab" href="#opss-product-images">
-            Product images (3)
+            Product images (2)
           </a>
         </li>
       </ul>
       <div class="govuk-tabs__panel" id="opss-case-images">
         <h2 class="govuk-heading-m">Case images</h2>
 
-        case images here - check on staging what more than one looks like...
-
-      </div>
-      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="opss-product-images">
-        <h2 class="govuk-heading-m">Product images</h2>
-
-        products images here - emulate how current design stacks images, but requires HR and sub title for multiple products
-
-      </div>
-    </div>
-
-  </div>
-</div>
-<!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx -->
+<!-- xxxxxxxxxxxxxx old html starts xxxxxxxxxxxxxxxx -->
 <div class="govuk-grid-row govuk-!-padding-bottom-6">
   <div class="govuk-grid-column-one-quarter">
 
@@ -107,6 +94,87 @@
 
       <a class="govuk-link app-block-link govuk-!-margin-right-3" target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGNFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--110295faaf0096d6d221774f790d2b4401c407a0/hair-dryer-with-plug.jpg">View image<span class="govuk-visually-hidden"> (hair-dryer-with-plug.jpg, opens in new tab)</span>
 </a>
+
+  </div>
+</div>
+<!-- xxxxxxxxxxxxxx old html ends xxxxxxxxxxxxxxxx -->
+
+      </div>
+      <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="opss-product-images">
+        <h2 class="govuk-heading-m">Product images</h2>
+
+
+<!-- old html starts -->
+<div class="govuk-grid-row govuk-!-padding-bottom-6">
+  <div class="govuk-grid-column-one-quarter">
+
+<div class="app-document-preview ">
+      <div class="app-document-preview__image">
+          <a target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/hair-dryer.jpg">              <img class="app-image" alt="hairdryer 100" src="https://staging.product-safety-database.service.gov.uk/rails/active_storage/representations/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdDRG9MWm05eWJXRjBTU0lJYW5CbkJqb0dSVlE2QzNKbGMybDZaVWtpRERNd01IZ3lNREFHT3daVU9oQmhkWFJ2WDI5eWFXVnVkRlE9IiwiZXhwIjpudWxsLCJwdXIiOiJ2YXJpYXRpb24ifX0=--7fd025dd046a263a4a9249b895d4186e9672cf8e/hair-dryer.jpg">
+
+            <span class="govuk-visually-hidden">(opens in new tab)</span>
+</a>
+      </div>
+</div>
+
+  </div>
+
+  <div class="govuk-grid-column-three-quarters">
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-1">hairdryer 100</h2>
+    <span class="govuk-hint govuk-!-font-size-16">
+      Updated 23 September 2021
+    </span>
+
+    <p class="govuk-body"></p><p>The product image 1</p><p></p>
+
+      <a class="govuk-link app-block-link govuk-!-margin-right-3" target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/hair-dryer.jpg">View image<span class="govuk-visually-hidden"> (hairdryer 100, opens in new tab)</span>
+</a>
+
+        <a class="govuk-link app-block-link govuk-!-margin-right-3" href="/products/519/documents/1806/edit">Edit image<span class="govuk-visually-hidden"> (hairdryer 100)</span>
+</a>
+<a class="govuk-link app-block-link" href="/products/519/documents/1806/remove">Remove image<span class="govuk-visually-hidden"> (hairdryer 100)</span>
+</a>
+
+  </div>
+</div>
+<div class="govuk-grid-row govuk-!-padding-bottom-6">
+  <div class="govuk-grid-column-one-quarter">
+
+<div class="app-document-preview ">
+      <div class="app-document-preview__image">
+          <a target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/hair-dryer_plug.jpg">              <img class="app-image" alt="hairdryer plug" src="https://staging.product-safety-database.service.gov.uk/rails/active_storage/representations/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdDRG9MWm05eWJXRjBTU0lJYW5CbkJqb0dSVlE2QzNKbGMybDZaVWtpRERNd01IZ3lNREFHT3daVU9oQmhkWFJ2WDI5eWFXVnVkRlE9IiwiZXhwIjpudWxsLCJwdXIiOiJ2YXJpYXRpb24ifX0=--7fd025dd046a263a4a9249b895d4186e9672cf8e/hair-dryer_plug.jpg">
+
+            <span class="govuk-visually-hidden">(opens in new tab)</span>
+</a>
+      </div>
+</div>
+
+  </div>
+
+  <div class="govuk-grid-column-three-quarters">
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-1">hairdryer plug</h2>
+    <span class="govuk-hint govuk-!-font-size-16">
+      Updated 23 September 2021
+    </span>
+
+    <p class="govuk-body"></p><p>the hairdryer 100 plug</p><p></p>
+
+      <a class="govuk-link app-block-link govuk-!-margin-right-3" target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/hair-dryer_plug.jpg">View image<span class="govuk-visually-hidden"> (hairdryer plug, opens in new tab)</span>
+</a>
+
+        <a class="govuk-link app-block-link govuk-!-margin-right-3" href="/products/519/documents/1814/edit">Edit image<span class="govuk-visually-hidden"> (hairdryer plug)</span>
+</a>
+<a class="govuk-link app-block-link" href="/products/519/documents/1814/remove">Remove image<span class="govuk-visually-hidden"> (hairdryer plug)</span>
+</a>
+
+  </div>
+</div>
+<!-- old html ends -->
+
+
+
+      </div>
+    </div>
 
   </div>
 </div>
