--- a/app/views/psd-general/imgs-pg1.html
+++ b/app/views/psd-general/imgs-pg1.html
@@ -22,8 +22,8 @@
           Businesses (0)
 </a>      </li>
       <li class="hmcts-sub-navigation__item">
-        <a class="hmcts-sub-navigation__link" id="Images_id" href="/cases/1903-0065/images">
-          Images (2) (3)
+        <a class="hmcts-sub-navigation__link" id="Images_id" href="/psd-general/imgs-pg2">
+          Images (1) (2)
 </a>      </li>
       <li class="hmcts-sub-navigation__item">
         <a class="hmcts-sub-navigation__link" id="Supporting information_id" href="/cases/1903-0065/supporting-information">
