--- a/app/views/index.html
+++ b/app/views/index.html
@@ -83,7 +83,7 @@
 
           <ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/imgs-pg1" target="_blank">Case overview</a> page</li>
-            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list" target="_blank">Case images</a> page</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/imgs-pg2" target="_blank">Case images</a> page</li>
           </ul>
 
         </div>
