--- a/app/views/psd-general/imgs-pg2.html
+++ b/app/views/psd-general/imgs-pg2.html
@@ -101,26 +101,27 @@
 
       </div>
       <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="opss-product-images">
-        <h2 class="govuk-heading-m">Product images</h2>
+        <h2 class="govuk-heading-s">The product name goes here</h2>
 
 
 <!-- old html starts -->
 <div class="govuk-grid-row govuk-!-padding-bottom-6">
   <div class="govuk-grid-column-one-quarter">
 
-<div class="app-document-preview ">
-      <div class="app-document-preview__image">
-          <a target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/hair-dryer.jpg">              <img class="app-image" alt="hairdryer 100" src="https://staging.product-safety-database.service.gov.uk/rails/active_storage/representations/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdDRG9MWm05eWJXRjBTU0lJYW5CbkJqb0dSVlE2QzNKbGMybDZaVWtpRERNd01IZ3lNREFHT3daVU9oQmhkWFJ2WDI5eWFXVnVkRlE9IiwiZXhwIjpudWxsLCJwdXIiOiJ2YXJpYXRpb24ifX0=--7fd025dd046a263a4a9249b895d4186e9672cf8e/hair-dryer.jpg">
+    <div class="app-document-preview ">
+          <div class="app-document-preview__image">
+              <a target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/hair-dryer.jpg">
+              <img class="app-image" alt="hairdryer 100" src="https://staging.product-safety-database.service.gov.uk/rails/active_storage/representations/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdDRG9MWm05eWJXRjBTU0lJYW5CbkJqb0dSVlE2QzNKbGMybDZaVWtpRERNd01IZ3lNREFHT3daVU9oQmhkWFJ2WDI5eWFXVnVkRlE9IiwiZXhwIjpudWxsLCJwdXIiOiJ2YXJpYXRpb24ifX0=--7fd025dd046a263a4a9249b895d4186e9672cf8e/hair-dryer.jpg">
 
-            <span class="govuk-visually-hidden">(opens in new tab)</span>
-</a>
-      </div>
-</div>
+                <span class="govuk-visually-hidden">(opens in new tab)</span>
+          </a>
+          </div>
+    </div>
 
   </div>
 
   <div class="govuk-grid-column-three-quarters">
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-1">hairdryer 100</h2>
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-1">hairdryer 100</h2>
     <span class="govuk-hint govuk-!-font-size-16">
       Updated 23 September 2021
     </span>
@@ -130,29 +131,27 @@
       <a class="govuk-link app-block-link govuk-!-margin-right-3" target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/hair-dryer.jpg">View image<span class="govuk-visually-hidden"> (hairdryer 100, opens in new tab)</span>
 </a>
 
-        <a class="govuk-link app-block-link govuk-!-margin-right-3" href="/products/519/documents/1806/edit">Edit image<span class="govuk-visually-hidden"> (hairdryer 100)</span>
-</a>
-<a class="govuk-link app-block-link" href="/products/519/documents/1806/remove">Remove image<span class="govuk-visually-hidden"> (hairdryer 100)</span>
-</a>
 
   </div>
 </div>
+
 <div class="govuk-grid-row govuk-!-padding-bottom-6">
+
   <div class="govuk-grid-column-one-quarter">
 
-<div class="app-document-preview ">
-      <div class="app-document-preview__image">
-          <a target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/hair-dryer_plug.jpg">              <img class="app-image" alt="hairdryer plug" src="https://staging.product-safety-database.service.gov.uk/rails/active_storage/representations/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdDRG9MWm05eWJXRjBTU0lJYW5CbkJqb0dSVlE2QzNKbGMybDZaVWtpRERNd01IZ3lNREFHT3daVU9oQmhkWFJ2WDI5eWFXVnVkRlE9IiwiZXhwIjpudWxsLCJwdXIiOiJ2YXJpYXRpb24ifX0=--7fd025dd046a263a4a9249b895d4186e9672cf8e/hair-dryer_plug.jpg">
+    <div class="app-document-preview ">
+          <div class="app-document-preview__image">
+              <a target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/hair-dryer_plug.jpg">              <img class="app-image" alt="hairdryer plug" src="https://staging.product-safety-database.service.gov.uk/rails/active_storage/representations/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdDRG9MWm05eWJXRjBTU0lJYW5CbkJqb0dSVlE2QzNKbGMybDZaVWtpRERNd01IZ3lNREFHT3daVU9oQmhkWFJ2WDI5eWFXVnVkRlE9IiwiZXhwIjpudWxsLCJwdXIiOiJ2YXJpYXRpb24ifX0=--7fd025dd046a263a4a9249b895d4186e9672cf8e/hair-dryer_plug.jpg">
 
-            <span class="govuk-visually-hidden">(opens in new tab)</span>
-</a>
-      </div>
-</div>
+                <span class="govuk-visually-hidden">(opens in new tab)</span>
+    </a>
+          </div>
+    </div>
 
   </div>
 
   <div class="govuk-grid-column-three-quarters">
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-1">hairdryer plug</h2>
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-1">hairdryer plug</h2>
     <span class="govuk-hint govuk-!-font-size-16">
       Updated 23 September 2021
     </span>
@@ -162,13 +161,76 @@
       <a class="govuk-link app-block-link govuk-!-margin-right-3" target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/hair-dryer_plug.jpg">View image<span class="govuk-visually-hidden"> (hairdryer plug, opens in new tab)</span>
 </a>
 
-        <a class="govuk-link app-block-link govuk-!-margin-right-3" href="/products/519/documents/1814/edit">Edit image<span class="govuk-visually-hidden"> (hairdryer plug)</span>
+
+
+  </div>
+
+</div>
+
+
+<!--h2 class="govuk-heading-s">The 2nd product name goes here</h2>
+<div class="govuk-grid-row govuk-!-padding-bottom-6">
+  <div class="govuk-grid-column-one-quarter">
+
+    <div class="app-document-preview ">
+          <div class="app-document-preview__image">
+              <a target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/hair-dryer.jpg">
+              <img class="app-image" alt="hairdryer 100" src="https://staging.product-safety-database.service.gov.uk/rails/active_storage/representations/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdDRG9MWm05eWJXRjBTU0lJYW5CbkJqb0dSVlE2QzNKbGMybDZaVWtpRERNd01IZ3lNREFHT3daVU9oQmhkWFJ2WDI5eWFXVnVkRlE9IiwiZXhwIjpudWxsLCJwdXIiOiJ2YXJpYXRpb24ifX0=--7fd025dd046a263a4a9249b895d4186e9672cf8e/hair-dryer.jpg">
+
+                <span class="govuk-visually-hidden">(opens in new tab)</span>
+          </a>
+          </div>
+    </div>
+
+  </div>
+
+  <div class="govuk-grid-column-three-quarters">
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-1">hairdryer 100</h2>
+    <span class="govuk-hint govuk-!-font-size-16">
+      Updated 23 September 2021
+    </span>
+
+    <p class="govuk-body"></p><p>The product image 1</p><p></p>
+
+      <a class="govuk-link app-block-link govuk-!-margin-right-3" target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcGtFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--836c42dbb872457fd417a4c9a3becfd9fd1a62f3/hair-dryer.jpg">View image<span class="govuk-visually-hidden"> (hairdryer 100, opens in new tab)</span>
 </a>
-<a class="govuk-link app-block-link" href="/products/519/documents/1814/remove">Remove image<span class="govuk-visually-hidden"> (hairdryer plug)</span>
-</a>
+
+
 
   </div>
 </div>
+
+<div class="govuk-grid-row govuk-!-padding-bottom-6">
+
+  <div class="govuk-grid-column-one-quarter">
+
+    <div class="app-document-preview ">
+          <div class="app-document-preview__image">
+              <a target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/hair-dryer_plug.jpg">              <img class="app-image" alt="hairdryer plug" src="https://staging.product-safety-database.service.gov.uk/rails/active_storage/representations/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaDdDRG9MWm05eWJXRjBTU0lJYW5CbkJqb0dSVlE2QzNKbGMybDZaVWtpRERNd01IZ3lNREFHT3daVU9oQmhkWFJ2WDI5eWFXVnVkRlE9IiwiZXhwIjpudWxsLCJwdXIiOiJ2YXJpYXRpb24ifX0=--7fd025dd046a263a4a9249b895d4186e9672cf8e/hair-dryer_plug.jpg">
+
+                <span class="govuk-visually-hidden">(opens in new tab)</span>
+    </a>
+          </div>
+    </div>
+
+  </div>
+
+  <div class="govuk-grid-column-three-quarters">
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-1">hairdryer plug</h2>
+    <span class="govuk-hint govuk-!-font-size-16">
+      Updated 23 September 2021
+    </span>
+
+    <p class="govuk-body"></p><p>the hairdryer 100 plug</p><p></p>
+
+      <a class="govuk-link app-block-link govuk-!-margin-right-3" target="_blank" rel="noopener" href="/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaHBBcDhFIiwiZXhwIjpudWxsLCJwdXIiOiJibG9iX2lkIn19--463e1b281a4f8c8c2eda24247b32e3e6dede523d/hair-dryer_plug.jpg">View image<span class="govuk-visually-hidden"> (hairdryer plug, opens in new tab)</span>
+</a>
+
+
+
+  </div>
+
+</div-->
 <!-- old html ends -->
 
 
