download csv file link and flexbox

--- a/app/views/psd-general/inc_opss-filters-section.html
+++ b/app/views/psd-general/inc_opss-filters-section.html
@@ -1,4 +1,4 @@
-    <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1">
+    <section class="govuk-grid-column-one-quarter govuk-!-padding-right-1 opss-full-height__col">
 
         <h2 class="govuk-heading-m">
             Filters<span class="govuk-visually-hidden">:</span>
@@ -410,4 +410,10 @@
             </div>
 
         </form>
+
+        <div class="govuk-!-padding-top-2 opss-desktop-margin-bottom-168px opss-full-height__col--bottom">
+            <p class="govuk-body govuk-!-font-size-14">
+                Request results as <br class="opss-br-desktop">a <a href="#" class="govuk-link govuk-link--no-visited-state"><abbr title="Comma-Separated Values">CSV</abbr> file</a> to download
+            </p>
+        </div>
     </section>
