--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -108,6 +108,17 @@ abbr[title]{
     color: $govuk-secondary-text-colour;
 }
 
+.opss-border-top, .opss-border-bottom, .opss-border-left, .opss-border-right, .opss-border-all {
+    border-color: $govuk-border-colour;
+    border-style: solid;
+    border-width: 0;
+}
+.opss-border-top {border-top-width: 1px; }
+.opss-border-bottom {border-bottom-width: 1px; }
+.opss-border-left {border-left-width: 1px; }
+.opss-border-right {border-right-width: 1px; }
+.opss-border-all {border-width: 1px; }
+
 .opss-details--sm {
     @include govuk-media-query($from: desktop) {
         summary {
@@ -300,6 +311,22 @@ dl.opss-summary-list-aside {
     }
 }
 
+@include govuk-media-query($from: desktop) {
+    .opss-full-height {
+        display: flex;
+        flex-direction: row;
+
+        .opss-full-height__col {
+            display: flex;
+            flex-direction: column;
+
+                & > .opss-full-height__col--bottom {
+                    margin-top: auto;
+                }
+        }
+    }
+}
+
 .opss-table-items {
 
     thead th:nth-child(2) {width: auto; }
@@ -390,5 +417,11 @@ dl.opss-summary-list-aside {
 
     .opss-desktop-padding-left-0 {
         padding-left: 0;
+    }
+    .opss-desktop-padding-bottom-8 {
+        padding-bottom: govuk-spacing(8);
+    }
+    .opss-desktop-margin-bottom-168px {
+        margin-bottom: 168px; /* aligns above pagination */
     }
 }
