--- a/app/views/psd-general/cases-page.html
+++ b/app/views/psd-general/cases-page.html
@@ -10,7 +10,7 @@
 
 {% include "psd-general/inc_opss-header-section.html" %}
 
-<div class="govuk-grid-row">
+<div class="govuk-grid-row opss-full-height">
 
     {% include "psd-general/inc_opss-filters-section.html" %}
 
