--- a/app/views/psd-general/imgs-pg2.html
+++ b/app/views/psd-general/imgs-pg2.html
@@ -68,7 +68,7 @@
         </li>
       </ul>
       <div class="govuk-tabs__panel" id="opss-case-images">
-        <h2 class="govuk-heading-m">Case images</h2>
+        <h2 class="govuk-heading-s">Case images</h2>
 
 <!-- xxxxxxxxxxxxxx old html starts xxxxxxxxxxxxxxxx -->
 <div class="govuk-grid-row govuk-!-padding-bottom-6">
@@ -85,7 +85,7 @@
   </div>
 
   <div class="govuk-grid-column-three-quarters">
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-1">hair-dryer-with-plug.jpg</h2>
+    <h2 class="govuk-heading-s govuk-!-margin-bottom-1">hair-dryer-with-plug.jpg</h2>
     <span class="govuk-hint govuk-!-font-size-16">
       Updated 23 September 2021
     </span>
