--- a/app/views/psd-general/inc_opss-header-section.html
+++ b/app/views/psd-general/inc_opss-header-section.html
@@ -40,7 +40,7 @@
     <div class="govuk-grid-column-full">
 
         <form action="#" method="post" novalidate>
-            <div class="govuk-form-group govuk-!-padding-top-4 govuk-!-padding-bottom-2">
+            <div class="govuk-form-group govuk-!-padding-top-4 govuk-!-padding-bottom-7"> <!-- opss-border-bottom -->
 
                 <label class="govuk-label" for="cases-search">
                     Keywords search
