--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -421,7 +421,7 @@ dl.opss-summary-list-aside {
     .opss-desktop-padding-bottom-8 {
         padding-bottom: govuk-spacing(8);
     }
-    .opss-desktop-margin-bottom-168px {
-        margin-bottom: 168px; /* aligns above pagination */
+    .opss-desktop-margin-bottom-218px {
+        margin-bottom: 218px !important; /* aligns bottom of tbody */
     }
 }
