--- a/app/views/index.html
+++ b/app/views/index.html
@@ -75,6 +75,7 @@
         <div class="govuk-details__text">
           <ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page" target="_blank">Cases page &quot;refresh&quot;</a> full</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-banner" target="_blank">Cases page &quot;refresh&quot;</a> full with success banner</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-list" target="_blank">Cases page &quot;refresh&quot;</a> list only</li>
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/cases-page-filters-keywords" target="_blank">Cases page &quot;refresh&quot;</a> filters &amp; keywords only</li>
           </ul>
