--- a/app/views/psd-general/inc_opss-filters-section.html
+++ b/app/views/psd-general/inc_opss-filters-section.html
@@ -411,9 +411,14 @@
 
         </form>
 
-        <div class="govuk-!-padding-top-2 opss-desktop-margin-bottom-168px opss-full-height__col--bottom">
-            <p class="govuk-body govuk-!-font-size-14">
-                Request results as <br class="opss-br-desktop">a <a href="#" class="govuk-link govuk-link--no-visited-state"><abbr title="Comma-Separated Values">CSV</abbr> file</a> to download
+        <div class="govuk-!-padding-top-2 govuk-!-padding-right-1 govuk-!-padding-bottom-1 govuk-!-padding-left-2 govuk-!-margin-bottom-3 opss-desktop-margin-bottom-218px opss-full-height__col--bottom opss-border-all">
+            <p class="govuk-body govuk-!-padding-bottom-1 govuk-!-margin-bottom-0 govuk-!-font-size-14">
+                Request this list as a <br class="opss-br-desktop">downloadable <a href="/psd-general/cases-page-banner" class="govuk-link govuk-link--no-visited-state"><abbr title="Comma-Separated Values">CSV</abbr> file</a>.
             </p>
         </div>
+        <!--div class="govuk-!-padding-top-2 govuk-!-padding-right-1 govuk-!-padding-bottom-1 govuk-!-padding-left-2 opss-desktop-margin-bottom-168px opss-full-height__col--bottom opss-border-all">
+            <p class="govuk-body govuk-!-padding-bottom-1 govuk-!-margin-bottom-0 govuk-!-font-size-14">
+                Request your search results <br class="opss-br-desktop">as a downloadable <a href="/psd-general/cases-page-banner" class="govuk-link govuk-link--no-visited-state"><abbr title="Comma-Separated Values">CSV</abbr> file</a>.
+            </p>
+        </div-->
     </section>
