Remove member pages

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -87,6 +87,15 @@
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/imgs-pg2" target="_blank">Case images</a> page</li>
           </ul>
 
+          <p class="govuk-body"><b>Remove team members:</b></p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/remove-member-links" target="_blank">Team member</a> remove</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/remove-member-links-confirm" target="_blank">Team member</a> confirm remove</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/remove-member-links-confirm-error" target="_blank">Team member</a> confirm error msg</li>
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/remove-member-links-success" target="_blank">Team member</a> success</li>
+          </ul>
+
         </div>
       </details>
 
