--- a/app/views/index.html
+++ b/app/views/index.html
@@ -96,6 +96,12 @@
             <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/remove-member-links-success" target="_blank">Team member</a> success</li>
           </ul>
 
+          <p class="govuk-body"><b>Businesses:</b></p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link govuk-link--no-visited-state" href="/psd-general/businesses-page" target="_blank">Businesses</a> page</li>
+          </ul>
+
         </div>
       </details>
 
