--- a/app/views/psd-general/inc_opss-results-section.html
+++ b/app/views/psd-general/inc_opss-results-section.html
@@ -15,7 +15,7 @@
                             <option value="oldest">Oldest updates</option>
                             <option value="newest">Newest cases</option>
                         </select>
-                        <button class="govuk-button opss-js-enabled-hidden" data-module="govuk-button">
+                        <button class="govuk-button opss-js-enabled-hidden">
                             Sort
                         </button>
                     </form>
