--- a/app/views/psd-general/inc_opss-team-list.html
+++ b/app/views/psd-general/inc_opss-team-list.html
@@ -108,6 +108,17 @@
       </td>
     </tr>
   </tbody>
+
+  <!--tfoot class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th scope="col" class="govuk-table__header">Name</th>
+      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Email</th>
+      <th scope="col" class="govuk-table__header">
+        <span class="govuk-visually-hidden">Remove from team</span>
+      </th>
+    </tr>
+  </tfoot-->
+
 </table>
 
 
