omitted some text

--- a/app/views/psd-general/businesses-page.html
+++ b/app/views/psd-general/businesses-page.html
@@ -64,7 +64,7 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-              <p class="govuk-body">12 businesses matching keyword(s) <span class="govuk-!-font-weight-bold">Lorem, consectetur, ipsum</span>.</p>
+              <p class="govuk-body">12 businesses matching keyword(s) <span class="govuk-!-font-weight-bold">Lorem, consectetur, ipsum</span>, were found.</p>
               <!--p class="govuk-body">There are currently 248 businesses .......... ?</p-->
 
               <!-- Company registration number -->
