--- a/app/views/cos-tasks-proto/admin-products-list.html
+++ b/app/views/cos-tasks-proto/admin-products-list.html
@@ -1,7 +1,7 @@
 {% extends "layout-cos-tasks-proto.html" %}
 
 {% block pageTitle %}
-    Prototype
+    Admin
 {% endblock %}
 
 {% block beforeContent %}
@@ -18,19 +18,13 @@
 
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-            Test
+            Product data
         </h1>
 
-        <!--button id="createTblProducts">Create tbl</button>
-        <br><br>
-        <button id="populateTblProducts">Populate Create tbl</button>
 
-
-        <div id="status" style="padding: 100px;"></div>
-
-        <hr-->
 
 <div id="controls">
+    <p>Add a car to the database</p>
     <label>Make:</label>
     <input type="text" id="carmake" />
     <br />
@@ -38,11 +32,8 @@
     <input type="text" id="carmodel" />
     <br />
     <button type="button" id="addcar" onclick="addCar();">Add Car</button>
-    <br /><br /><br /><br />
-    <label>Update this row:</label>
-    <input type="text" id="updateRowInput" /><br />
-    <button type="button" id="updaterow" onclick="updateRow();">Update Row</button>
 </div>
+
 <div id="carlistholder">
      <h3>Your Cars</h3>
 
