--- a/app/views/psd-general/inc_opss-old-filters.html
+++ b/app/views/psd-general/inc_opss-old-filters.html
@@ -7,7 +7,7 @@
         <input type="submit" value="Search" class="search-box--submit" data-disable-with="Search">
       </div>
 
-      <a class="govuk-skip-link " href="#results">Skip to results</a>
+      <a href="#results" class="govuk-skip-link">Skip to results</a>
 
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
