--- a/app/views/psd-general/inc_opss-filters-section.html
+++ b/app/views/psd-general/inc_opss-filters-section.html
@@ -4,6 +4,10 @@
             Filters<span class="govuk-visually-hidden">:</span>
         </h2>
 
+        <a href="#results" class="govuk-skip-link opss-skip-link opss-skip-link--mb">
+            Skip to results
+        </a>
+
         <form action="#" method="post" novalidate>
 
             <div class="govuk-form-group opss-form-group opss-form-group--sm-labels">
